--- a/.trivyignore
+++ b/.trivyignore
@@ -6,6 +6,9 @@ CVE-2024-0057
 ## CVE-2024-34156 (usr/local/bin/aws-sso)
 CVE-2024-34156
 
+## CVE-2024-41110 (usr/local/bin/aws-sso)
+CVE-2024-41110
+
 ## CVE-2024-45337 (usr/local/bin/aws-sso, usr/local/bin/cloud-platform)
 CVE-2024-45337
 
