Ignoring CVE-2025-26646, .NET dep, out of scope to fix
Signed-off-by: Jacob Woffenden <jacob.woffenden@justice.gov.uk>

--- a/.trivyignore
+++ b/.trivyignore
@@ -2,6 +2,9 @@
 ## CVE-2024-0057
 CVE-2024-0057
 
+## CVE-2025-26646
+CVE-2025-26646
+
 # Go
 ## CVE-2024-34156 (usr/local/bin/aws-sso)
 CVE-2024-34156
