chore: ignore CVE-2025-66418 and CVE-2025-66471 in Miniconda urllib3
Revert pip upgrade workaround and add CVEs to .trivyignore instead.
These vulnerabilities are in urllib3 which is a transitive dependency
bundled with Miniconda. We cannot independently update it without
mixing pip and conda which is not recommended.

Set 30-day expiration to review when Miniconda releases an update.

--- a/.trivyignore
+++ b/.trivyignore
@@ -87,3 +87,8 @@ CVE-2025-58187
 
 ## CVE-2025-61729 (usr/bin/ollama, usr/local/bin/aws-sso, usr/local/bin/cloud-platform, usr/local/bin/helm, usr/local/bin/kubectl)
 CVE-2025-61729
+
+# Python
+## CVE-2025-66418, CVE-2025-66471 (Miniconda urllib3 - transitive dependency in conda)
+CVE-2025-66418 exp:2026-01-07
+CVE-2025-66471 exp:2026-01-07
