--- a/.trivyignore
+++ b/.trivyignore
@@ -113,3 +113,6 @@ CVE-2025-38666
 
 ## CVE-2025-63811 - (usr/local/bin/aws-sso)
 CVE-2025-63811
+
+## CVE-2026-24049 (Python (python-pkg) - wheel (METADATA))
+CVE-2026-24049 exp:2026-02-06
